// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StreetAddressFieldTest basic test 1`] = `
<div>
  <span
    data-testid="street-address-field__title"
    style="font-style: italic;"
  >
    The street address description
  </span>
  <div
    class="col-md-12"
    style="margin-left: -15px; margin-bottom: 10px; margin-top: 10px;"
  >
    <div
      class="custom-text-widget-header"
      data-testid="custom-text-widget__address-line-1--text-header"
    >
      <span>
        Address Line 1
      </span>
      <span
        style="float: right;"
      >
        13
        /
        80
      </span>
    </div>
    <input
      class="custom-text-widget-input"
      data-testid="custom-text-widget__address-line-1--text-input"
      maxlength="80"
      name="Address Line 1"
      style="min-width: 100%; height: 37px;"
      type="text"
      value="my first line"
    />
    <span
      data-testid="custom-text-widget--description-field__address-line-1"
      style="font-style: italic;"
    />
  </div>
  <div
    class="col-md-12"
    style="margin-left: -15px; margin-bottom: 10px;"
  >
    <div
      class="custom-text-widget-header"
      data-testid="custom-text-widget__address-line-2--text-header"
    >
      <span>
        Address Line 2
      </span>
      <span
        style="float: right;"
      >
        14
        /
        80
      </span>
    </div>
    <input
      class="custom-text-widget-input"
      data-testid="custom-text-widget__address-line-2--text-input"
      maxlength="80"
      name="Address Line 2"
      style="min-width: 100%; height: 37px;"
      type="text"
      value="my second line"
    />
    <span
      data-testid="custom-text-widget--description-field__address-line-2"
      style="font-style: italic;"
    />
  </div>
  <div
    class="col-md-12"
    style="margin-left: -15px; margin-bottom: 10px;"
  >
    <div
      class="custom-text-widget-header"
      data-testid="custom-text-widget__address-line-3--text-header"
    >
      <span>
        Address Line 3
      </span>
      <span
        style="float: right;"
      >
        13
        /
        80
      </span>
    </div>
    <input
      class="custom-text-widget-input"
      data-testid="custom-text-widget__address-line-3--text-input"
      maxlength="80"
      name="Address Line 3"
      style="min-width: 100%; height: 37px;"
      type="text"
      value="my third line"
    />
    <span
      data-testid="custom-text-widget--description-field__address-line-3"
      style="font-style: italic;"
    />
  </div>
</div>
`;

exports[`StreetAddressFieldTest basic test with empty form data array 1`] = `
<div>
  <span
    data-testid="street-address-field__title"
    style="font-style: italic;"
  >
    The street address description
  </span>
  <div
    class="col-md-12"
    style="margin-left: -15px; margin-bottom: 10px; margin-top: 10px;"
  >
    <div
      class="custom-text-widget-header"
      data-testid="custom-text-widget__address-line-1--text-header"
    >
      <span>
        Address Line 1
      </span>
      <span
        style="float: right;"
      >
        0
        /
        80
      </span>
    </div>
    <input
      class="custom-text-widget-input"
      data-testid="custom-text-widget__address-line-1--text-input"
      maxlength="80"
      name="Address Line 1"
      style="min-width: 100%; height: 37px;"
      type="text"
      value=""
    />
    <span
      data-testid="custom-text-widget--description-field__address-line-1"
      style="font-style: italic;"
    />
  </div>
  <div
    class="col-md-12"
    style="margin-left: -15px; margin-bottom: 10px;"
  >
    <div
      class="custom-text-widget-header"
      data-testid="custom-text-widget__address-line-2--text-header"
    >
      <span>
        Address Line 2
      </span>
      <span
        style="float: right;"
      >
        0
        /
        80
      </span>
    </div>
    <input
      class="custom-text-widget-input"
      data-testid="custom-text-widget__address-line-2--text-input"
      maxlength="80"
      name="Address Line 2"
      style="min-width: 100%; height: 37px;"
      type="text"
      value=""
    />
    <span
      data-testid="custom-text-widget--description-field__address-line-2"
      style="font-style: italic;"
    />
  </div>
  <div
    class="col-md-12"
    style="margin-left: -15px; margin-bottom: 10px;"
  >
    <div
      class="custom-text-widget-header"
      data-testid="custom-text-widget__address-line-3--text-header"
    >
      <span>
        Address Line 3
      </span>
      <span
        style="float: right;"
      >
        0
        /
        80
      </span>
    </div>
    <input
      class="custom-text-widget-input"
      data-testid="custom-text-widget__address-line-3--text-input"
      maxlength="80"
      name="Address Line 3"
      style="min-width: 100%; height: 37px;"
      type="text"
      value=""
    />
    <span
      data-testid="custom-text-widget--description-field__address-line-3"
      style="font-style: italic;"
    />
  </div>
</div>
`;

exports[`StreetAddressFieldTest basic test with no form data array 1`] = `
<div>
  <span
    data-testid="street-address-field__title"
    style="font-style: italic;"
  >
    The street address description
  </span>
  <div
    class="col-md-12"
    style="margin-left: -15px; margin-bottom: 10px; margin-top: 10px;"
  >
    <div
      class="custom-text-widget-header"
      data-testid="custom-text-widget__address-line-1--text-header"
    >
      <span>
        Address Line 1
      </span>
      <span
        style="float: right;"
      >
        0
        /
        80
      </span>
    </div>
    <input
      class="custom-text-widget-input"
      data-testid="custom-text-widget__address-line-1--text-input"
      maxlength="80"
      name="Address Line 1"
      style="min-width: 100%; height: 37px;"
      type="text"
      value=""
    />
    <span
      data-testid="custom-text-widget--description-field__address-line-1"
      style="font-style: italic;"
    />
  </div>
  <div
    class="col-md-12"
    style="margin-left: -15px; margin-bottom: 10px;"
  >
    <div
      class="custom-text-widget-header"
      data-testid="custom-text-widget__address-line-2--text-header"
    >
      <span>
        Address Line 2
      </span>
      <span
        style="float: right;"
      >
        0
        /
        80
      </span>
    </div>
    <input
      class="custom-text-widget-input"
      data-testid="custom-text-widget__address-line-2--text-input"
      maxlength="80"
      name="Address Line 2"
      style="min-width: 100%; height: 37px;"
      type="text"
      value=""
    />
    <span
      data-testid="custom-text-widget--description-field__address-line-2"
      style="font-style: italic;"
    />
  </div>
  <div
    class="col-md-12"
    style="margin-left: -15px; margin-bottom: 10px;"
  >
    <div
      class="custom-text-widget-header"
      data-testid="custom-text-widget__address-line-3--text-header"
    >
      <span>
        Address Line 3
      </span>
      <span
        style="float: right;"
      >
        0
        /
        80
      </span>
    </div>
    <input
      class="custom-text-widget-input"
      data-testid="custom-text-widget__address-line-3--text-input"
      maxlength="80"
      name="Address Line 3"
      style="min-width: 100%; height: 37px;"
      type="text"
      value=""
    />
    <span
      data-testid="custom-text-widget--description-field__address-line-3"
      style="font-style: italic;"
    />
  </div>
</div>
`;

exports[`StreetAddressFieldTest bubbles up changes. 1`] = `
<div>
  <span
    data-testid="street-address-field__title"
    style="font-style: italic;"
  >
    The street address description
  </span>
  <div
    class="col-md-12"
    style="margin-left: -15px; margin-bottom: 10px; margin-top: 10px;"
  >
    <div
      class="custom-text-widget-header"
      data-testid="custom-text-widget__address-line-1--text-header"
    >
      <span>
        Address Line 1
      </span>
      <span
        style="float: right;"
      >
        10
        /
        80
      </span>
    </div>
    <input
      class="custom-text-widget-input"
      data-testid="custom-text-widget__address-line-1--text-input"
      maxlength="80"
      name="Address Line 1"
      style="min-width: 100%; height: 37px;"
      type="text"
      value="Cloudy day"
    />
    <span
      data-testid="custom-text-widget--description-field__address-line-1"
      style="font-style: italic;"
    />
  </div>
  <div
    class="col-md-12"
    style="margin-left: -15px; margin-bottom: 10px;"
  >
    <div
      class="custom-text-widget-header"
      data-testid="custom-text-widget__address-line-2--text-header"
    >
      <span>
        Address Line 2
      </span>
      <span
        style="float: right;"
      >
        0
        /
        80
      </span>
    </div>
    <input
      class="custom-text-widget-input"
      data-testid="custom-text-widget__address-line-2--text-input"
      maxlength="80"
      name="Address Line 2"
      style="min-width: 100%; height: 37px;"
      type="text"
      value=""
    />
    <span
      data-testid="custom-text-widget--description-field__address-line-2"
      style="font-style: italic;"
    />
  </div>
  <div
    class="col-md-12"
    style="margin-left: -15px; margin-bottom: 10px;"
  >
    <div
      class="custom-text-widget-header"
      data-testid="custom-text-widget__address-line-3--text-header"
    >
      <span>
        Address Line 3
      </span>
      <span
        style="float: right;"
      >
        9
        /
        80
      </span>
    </div>
    <input
      class="custom-text-widget-input"
      data-testid="custom-text-widget__address-line-3--text-input"
      maxlength="80"
      name="Address Line 3"
      style="min-width: 100%; height: 37px;"
      type="text"
      value="Sunny day"
    />
    <span
      data-testid="custom-text-widget--description-field__address-line-3"
      style="font-style: italic;"
    />
  </div>
</div>
`;
